@@ -161,3 +161,5 @@ https://turnnewsapp.com/choice/165937.html
 https://estate.ltn.com.tw/article/9099
 https://www.setn.com/News.aspx?NewsID=690421
 https://www.setn.com/News.aspx?NewsID=690236
+https://www.upmedia.mg/news_info.php?SerialNo=82818
+https://www.upmedia.mg/news_info.php?SerialNo=81840
