@@ -1,3 +1,5 @@
+  - Improve the extraction of www.upmedia.mg
+
 v0.11.0 2020-02-15T09:54:00+0900
   - Improve the accuracy of extracting www.taiwannews.com.tw
   - Improve the extraction of news.cts.com.tw
